Tweaks from last session

--- a/topic01-git/book-b-branching-and-merging/02.02.md
+++ b/topic01-git/book-b-branching-and-merging/02.02.md
@@ -15,7 +15,7 @@ In the above image, we can see that:
 * On the very top (newest) commit, there's a blue box that says
   "master".
 * We say master is the branch that is currently *"checked out"*.
-* Master is the default branch that is created when you create or
+* `master` is the default branch that is created when you create or
   clone a repository.
 
 There are different Git visualization tools available for different
@@ -28,7 +28,7 @@ There are different Git visualization tools available for different
 
 For the purposes of this lab, we're going to create a new local repository:
 
-Open a Git shell, and create a new directory by running:
+Open a shell (a Git Shell on Windows, or a regular Terminal on macOS/Linux), and create a new directory by running:
 
 ```bash
 $ mkdir topic05
@@ -96,7 +96,7 @@ Listing the branches again, we can see that we're now on the new
 On the new branch, make a new change, and commit it.
 
 ``` bash
-$ echo something >> coolfile.txt
+$ echo "something" >> coolfile.txt
 $ git add coolfile.txt
 $ git commit -m "Add important changes to coolfile.txt"
 [my-new-branch 70be4a5] Add important changes to coolfile.txt
@@ -143,15 +143,15 @@ Visualizing now with `gitk --all`, we should see our master branch,
 
 ![That's why they're called branches!](img/gitk2.png)
 
-You can delete a branch like this:
+You can delete a branch like this (just an example, no need to run this):
 
 ``` bash
-$ git branch -d my-new-branch
-error: The branch 'my-new-branch' is not fully merged.
-If you are sure you want to delete it, run 'git branch -D my-new-branch'.
+$ git branch -d some-other-branch
+error: The branch 'some-other-branch' is not fully merged.
+If you are sure you want to delete it, run 'git branch -D some-other-branch'.
 ```
 
-Since in this case, there are changes on `my-new-branch` that don't
+Since in this case, there are changes on `some-other-branch` that don't
  exist anywhere else, we got an error message telling us that if we
  really want to delete it, we need to use `-D` instead of `-d`.
 
