--- a/topic01-git/book-b-branching-and-merging/04.04.md
+++ b/topic01-git/book-b-branching-and-merging/04.04.md
@@ -22,9 +22,11 @@ Switched to a new branch 'the-left'
 
 $ echo "Left is the best" >> importantfile.txt
 
-$ git commit -am "Left is the best"
+$ git add importantfile.txt
+$ git commit -m "Left is the best"
 [the-left 511709c] Left is the best
  1 file changed, 1 insertion(+)
+ create mode 100644 importantfile.txt
 ```
 
 Next, for the purposes of demonstration, let's create another branch, 
@@ -36,10 +38,11 @@ git checkout -b the-right master
 Switched to a new branch 'the-right'
 
 $ echo "Right is the best" >> importantfile.txt
-
-$ git commit -am "Right is the best"
+$ git add importantfile.txt
+$ git commit -m "Right is the best"
 [the-right 511709c] Right is the best
  1 file changed, 1 insertion(+)
+ create mode 100644 importantfile.txt
 ```
 
 We've made changes here in the same file, in two separate 
@@ -48,10 +51,10 @@ we're going to see a conflict. Let's merge `the-left` into
 `the-right` to see a conflict:
 
 ```bash
+# Run `git status` - we should be on the `the-right` branch
 $ git merge the-left 
 Auto-merging importantfile.txt
-CONFLICT (content): Merge conflict in importantfile.txt
-Recorded preimage for 'importantfile.txt'
+CONFLICT (add/add): Merge conflict in importantfile.txt
 Automatic merge failed; fix conflicts and then commit the result.
 ```
 
@@ -117,7 +120,7 @@ Right and Left are both equally good
 With our conflict manually resolved, we need to `git add`:
 
 ```
-# Stage our change
+# Stage our change and mark conflict as resolved
 git add importantfile.txt
 ```
 
@@ -139,7 +142,6 @@ Finally, commit the integrated change:
 ```bash
 $ git commit
 # Will prompt for an $EDITOR message
-Recorded resolution for 'importantfile.txt'.
 [the-right d87d6f5] Merge branch 'the-left' into the-right
 ```
 
@@ -150,4 +152,4 @@ to do (`git merge --abort`)
 
 ## How to minimize the chances of conflicts
 
-Try to keep commits small, & integrate your changes often.
+Try to keep commits small & integrate your changes often.
