remove fast-forward merge section

--- a/topic01-git/book-b-branching-and-merging/03.03.md
+++ b/topic01-git/book-b-branching-and-merging/03.03.md
@@ -13,10 +13,6 @@ Remember the branches from the last section? Originally there was the
  master branch, and delete the `my-new-branch` since we won't need it
  any longer.
 
-## What are the different types of merges in Git?
-
-### Fast-forward merging
-
 The simplest form of merging is *fast-forward* merging. Since branches
  are just references to commits, and `my-new-branch` is a direct
  descendant of the `master` branch; we can just update the `master`
@@ -24,7 +20,7 @@ The simplest form of merging is *fast-forward* merging. Since branches
 
 This is the default way that Git will merge when the target branch is
  an ancestor of the source branch. First, `checkout` the target branch
- (master in this case), and then use the `merge` subcommand to bring
+ (`master` in this case), and then use the `merge` subcommand to bring
  the changes from the source branch (`my-new-branch`) into this
  branch:
 
@@ -48,11 +44,11 @@ $ git branch -d my-new-branch
 Deleted branch my-new-branch (was c1e11ad).
 ```
 
-### Merge commits (or *non-fast-forward* merging)
+### Merge commits
 
 In some cases, the target branch will not be a direct ancestor of the
  source branch. Here, the default action is to create a new commit
- which has two (or more) *parent* commits.
+ which has two (or more) *parent* commits and a message.
 
 ![Before creating a merge commit](img/beforemergecommit1.png)
 
