first pass at Agile content

--- a/topic02-agile/book-a/00.Lab-01.md
+++ b/topic02-agile/book-a/00.Lab-01.md
@@ -1,3 +1,3 @@
 # Objectives
 
-A few sentences on the purpose of the lab. Avoid bullet points here for formatting reasons. The title of the lab is taken from the name of this step.
+This lab will reinforce some concepts from the talk and prepare you for taking a specification and breaking it into User Stories and small tasks to help you realise them. It will emphasise the importance of small tasks with a view to the overall quality of the solution and will give you a glimpse into how a college assignment can be treated as a real world industry project.
