--- a/topic02-agile/book-a/01.01.md
+++ b/topic02-agile/book-a/01.01.md
@@ -1,71 +1,76 @@
-# Text
+# Background Reading
 
-It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [inset a link to Google](http://google.com)
+To complement the presentation, some background reading is provided here. This should be viewed as a launchpad into your own Agile journey.
 
-## Lists
+## The Agile Manifesto
 
 Sometimes you want numbered lists:
 
-1. One
-2. Two
-3. Three
+Agile is an umbrella term for a number of methodologies such as Scrum, Lean, Kanban and XP among others. In RHMAP we follow a Scrum approach but please note that we use the term Scrum / Agile interchangeably to represent the methodology we are following.
 
-Sometimes you want bullet points:
+Agile bases itself around a number of principles which are embodied in a document known as the [Agile Manifesto](http://www.agilemanifesto.org/). In short it states that we can improve how we work by placing value and emphasis on certain approaches. It states that we value:
 
-* Start a line with a star
-* Profit!
+* **Individuals and interactions** over Processes and tools
+* **Working software** over Comprehensive documentation
+* **Customer collaboration** over Contract negotiation
+* **Responding to change** over Following a plan
 
-Alternatively,
+The crucial point about this is we place value in the items on the right but we place more value in the items on the **left**.
 
-- Dashes work just as well
-- And if you have sub points, put two spaces before the dash or star:
-  - Like this
-  - And this
 
-## Images
+## A brief introduction to Scrum Terminology
 
-If you want a link to a local image, place the image in the `img` folder and then insert a link like this:
+Scrum is an Agile framework for completing complex projects. Scrum originally was formalized for software development projects, but it works well for any complex, innovative scope of work. The possibilities are endless. The Scrum framework is deceptively simple and can easily be followed for any project you undertake.
 
-![](img/02.jpg)
+### Scrum Team Roles
 
-Alternatively you can directly link to images on the web:
+* Scrum Team
+The Scrum Team is made up of individuals from various parts of the organisation such as Engineering, Operations, QA, Support, Technical Writer, Sales, Marketing etc. The Scrum Team is normally put together around the thematic area of work that they are involved in, meaning that the team can change over time depending on what expertise is required within the group. Within a Scrum Team, there are, deliberately, no assigned roles. This is intended to promote the idea that any member of the team is free to take on any piece of work. People with a particular skill set or expertise will naturally gravitate towards the tasks that the feel most comfortable with.
 
-![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
+* Product Owner
+Product owners control the vision for their product or group. They are focused on understanding business, technical and market requirements, then prioritizing the work to be done by the scrum team accordingly. Within Sustaining Engineering our Product Owners can be representatives of various groups that we work with, for example, Operations and Support, who help set our agenda.
 
-The above includes a title.
+* Scrum Master
+Scrum Masters are the champion for scrum within their team. They coach the team, the product owner, and the business on the scrum process and look for ways to fine-tune their practice of it. They are a guiding hand for the team and act as a shield to help protect the team and keep them focused on the work at hand. A main role they play is unblocking a team member if they have an issue. The Scrum Master is not the "leader" of the team - Scrum teams are self organizing. Rather, the Scrum Master is a "Master" of the "Scrum" principles and should be viewed as a facilitator.
 
-# Structured documents
+### Scrum Lifecycle
 
-Sometimes it's useful to have different levels of headings to structure your documents. Start lines with a `#` to create headings. Multiple `##` in a row denote smaller heading sizes.
+Scrum follows a lifecycle consisting of several parts, all wrapped around the concept of a **Sprint**. A sprint is a timeboxed effort, typically two weeks, which has the potential to deliver something of value or something that is shippable to a customer. Within the two weeks we commit to trying to complete a certain number of tasks which we aim to complete entirely. All of the following stages of the Agile lifecycle are attended by the three main roles: Scrum Team, Product Owner and Scrum Master as well as any other interested attendee.
 
-### This is a third-tier heading
+#### Backlog Priority and Estimation
 
-You can use one `#` all the way up to `######` six for different heading sizes.
+The Backlog should constantly be prioritised and any item within the backlog should have an appropriate estimate. It is also recommended if any work is obvious to create known SubTasks for helping gain a better estimation, as SubTasks help to identify the larger picture required to get a particular issue over the line. However, if these Subtasks are estimated to be more than 2 to 3 days effort, they should be created as stand alone tasks, which can then have SubTasks added to get to a greater level of detail.
 
-If you'd like to quote someone, use the > character before the line:
+#### Sprint Planning
 
-> Coffee. The finest organic suspension ever devised... I beat the Borg with it.
-> - Captain Janeway
+With the backlog already being in a prioritised state and an estimated accordingly, the team meet and decide what should make up the Sprint. The Product Owner will have helped us arrive at this state and is available for any clarification. Typically a Sprint revolves around a Thematic area to help the team focus and allows work to commence on related issues. During planning, the team use the **Story Point** measure to gauge the complexity of the work they are about to undertake and arrive at the contents of the sprint, guided by that measure. How many story points a team can complete in a given sprint is termed the **Velocity** and over time it will help the team gauge how much work they can comfortably take on.
 
-There are many different ways to style code with GitHub's markdown. If you have inline code blocks, wrap them in backticks: `var example = true`.  If you've got a longer block of code, you can indent with four spaces:
+#### Sprint Review
 
-    if (isAwesome){
-      return true
-    }
+After the sprint has concluded, typically on the last day of the sprint, we have a review. During the review we can share with other teams what we achieved. This is an opportunity to demo or showcase the sprint's outputs of the sprint. The audience for that meeting is entirely dependent on the focus of the sprint.
 
-GitHub also supports something called code fencing, which allows for multiple lines without indentation:
+#### Sprint Retrospective
 
-~~~
-if (isAwesome){
-  return true
-}
-~~~
+This is typically the most important stage of the lifecycle. Here we give the members who participated within the Sprint an opportunity to share their experiences in an attempt to positively impact the Agile process that we are following. Typically the format follows a format of sharing:
 
-And if you'd like to use syntax highlighting, include the language:
+1. What we thought worked well -- to reinforce it and make sure we keep going in the right direction
+2. What we thought didn't work so well -- to raise an awareness that the process might need reviewing
+3. Action Points -- typically what will we do for the next sprint, what will we change, any follow on work, etc.
 
-~~~javascript
-if (isAwesome){
-  return true
-}
-~~~
+The Sprint Retrospective is a core pillar of Scrum. As a team we want to constantly learn from our experiences in order to refine and improve how we work as a team. Within Scrum it is known as the principle of do, learn and adapt.
 
+#### Daily Standup
+
+Every day during the sprint we hold a daily standup, which is a strict timeboxed checkpoint for the team. This is an opportunity for the team to share their current status and to flag any issues that are blocking them. Three core questions are asked:
+
+1. What did you achieve yesterday?
+2. What will you look at today?
+3. Are there any blockers stopping you from progressing your work?
+
+Questions 1 and 2 help to distribute the work among the team and ensure that the Sprint is progressing in the correct manner. The third question is very important to alert the team to a potential issue stopping you completing your work. Obviously this should be brought up through other forms of communication ahead of the Standup but the Standup provides an opportunity to share this widely with the team.
+
+### Product Backlog
+The Product Backlog is an ordered list of all the items that the product owner wants done. A scrum team should typically spend approx 10% of their time reviewing and refining the items on the product backlog - breaking down large items into smaller, more achievable tasks and estimating the effort required to complete these tasks. At any time, the Scrum Team should have enough items identified and broken down into to small tasks to populate approx 2 sprints. This gives the Scrum Team some flexibility when planning a sprint as they should always have more than enough tasks ready to bring into a sprint. As part of backlog refinement, the Scrum Team should be looking several sprints out (typically 5 sprints) at the work on the horizon, and be starting to break this work down into smaller tasks. This ensures that any dependencies on other teams can be identified and flagged early, provides time to engage with the product owner to seek clarification and allows for investigation or "spike" tasks to be prioritised so that further refinement can be done.
+
+### Sprint Backlog
+The Sprint backlog represents the work that the Scrum Team have committed to trying to complete within a given sprint. These items could be new feature requests or bug fixes, among other tasks. Like the product backlog, the sprint backlog should be ordered, with high priority items moving to the **top of the backlog**. Ideally, new items discovered during a sprint should not be added to the Product backlog rather than the Sprint Backlog - unless they are deemed necessary to achieve the sprint goal. When this happens, a discussion with the product owner may be necessary to negotiate which task(s) will be dropped from the sprint to accommodate this new work. Alternatively, the Scrum Team may decide that they have capacity to take on this new work without the need to drop any other work from the sprint.
