--- a/topic02-agile/book-a/02.02.md
+++ b/topic02-agile/book-a/02.02.md
@@ -1,20 +1,41 @@
-# Tables, Lines and Images
+# The importance of knowing when you are Done
 
 
-Tables can look like this:
+Agile teams work on the principle of a definition of done. We promote complete flexibility within the team to ensure that **HOW** we get something done is up to the team. We wish to empower smart people to allow the right choices and approach emerge in order to complete something. This is complemented by us already understanding the **WHAT** (should be done) and **WHY** (should it be done) which we receive from our Product Owner. The definition of done is often written with a level of freedom as not all tasks we complete are black and white so the list is deliberately not strict.
 
-Head 1 | Head 2
------- | -------
-cell 1 | cell 2
-cell 3 | cell 4
+Here is a sample definition of done from one of our Red Hat Teams:
 
+* Code is commented where appropriate
+* Code added has appropriate tests (where applicable)
+* Code is checked in to a relevant branch
+* Code has passed a quality check
+* Code is deployed somewhere and another engineer has verified the work
 
----
+This ordering actually follows our main stage of delivery which is Develop —> Test —> Build —> Test —> Deploy —> Test. This reflects the fact that the team is currently made up of Engineering and QA focused individuals. The Definition of Done may change over time at the consensus of the team and may change if other roles are present e.g. a Designer, a Business Analyst or a DevOps person may bring a new view to the world.
 
-A horizontal rules above and below
+Going back to the WHAT, WHY and HOW, taking the definition of done in that capacity we can begin to see the rationale emerging.
 
----
+* Code is commented where appropriate
+    1. **WHAT** = Adding comments to new code / files
+    2. **WHY** = Maintainability of code for future bug fixes
+    3. **HOW** = write relevant comments on complex or mission critical code e.g. don't comment on a logging statement
 
-Some more images:
+* Code added has appropriate tests (where applicable)
+    1. **WHAT** = Testing new code that we added
+    2. **WHY** = Important that we have some form of coverage to protect our code
+    3. **HOW** = write unit tests for code that is testable , write UART tests etc.
 
-![](img/01.jpg)
+* Code is checked in to a relevant branch
+    1. **WHAT** = version control
+    2. **WHY** = Need to have code version controlled
+    3. **HOW** = could be a branch, or master checkin depending on the code / release / timing
+
+* Code has passed a quality check
+    1. **WHAT** = some form of quality pass has occured
+    2. **WHY** = we want to improve the quality of our work not add to a technical debt mountain
+    3. **HOW** = Maybe we use SonarQube, maybe we use the PR guidelines, maybe we use pair programming.
+
+* Code is deployed somewhere and another engineer has verified the work
+    1. **WHAT** = Validation on a machine and with a person that is not the developer who made the changes
+    2. **WHY** = Because it avoids confirmation bias, it ensures it works on multiple machines
+    3. **HOW** = Deploy on a Cluster and ask someone to validate the work
