--- a/topic02-agile/book-a/03.03.md
+++ b/topic02-agile/book-a/03.03.md
@@ -1,65 +1,53 @@
-# Links and Code Blocks
+# Story Points and the INVEST Model
 
-You can inert links in bullet points:
+Items within the Backlogs have an associated **Story Points** value. Story Points are a measure of effort/complexity, capturing how much work will be required to achieve the goals of a particular item. Effort/complexity is not directly related to time and we are trying to move away from time based estimates which have many known biases. Story point values are based on a loose Fibonacci scale of 0,1,2,3,5,8,13,21,34,50 and 100. The important thing to remember here is the numbers are Imaginary!! We don't get too hung up on the numbers as we use them to guide us to a correct decision. If we see that numbers are too high, it's a good indicator of risk. We prefer to use smaller numbers to ensure a constant flow of bounded work.
 
-- <http://github.com>
-- <http://bitbucket.dom>
+## Sample Red Hat Story Point Scale
 
-You can also insert links to other steps:
+This scale is taken from one of our teams, with each team encouraged to come up with their own scale and rationale behind it.
 
-- [Step 01](#/01)
-- [Step 02](#/02)
-- [Step 03](#/03)
-- [Step 04](#/04)
+* 0 : No action required, this could be a non-functional requirement or a validation metric. They should be taken into account but typically the ticket cannot be directly actioned upon and could be closed when the related work is completed.
+* 1 : No thought process required, a trivial change such as a version bump, fixing a typo, etc.
+* 2 : Almost a trivial change but some tough process required, e.g. logging statements and docs update.
+* 3 : Manageable change for 1 person. Relatively easy change which might hit multiple files, some form of research is possibly needed prior to the start of real work.
+* 5 : Possibly a manageable change for 1 person but multiple people could collaborate. Scope might hit multiple components, small amount of uncertainty that might require some research (termed a spike), sub-tasks are most likely to appear at this point to help flesh out the moving parts that need to be addressed.
+* 8 : Potentially no longer a manageable change for 1 person but an indicator that help might be necessary. Same as a 5 but with higher uncertainty, meaning a spike is most likely to be required and several sub-tasks should be created.
+* 13 : Large change, spread across multiple components. Unknows are present, we should be hesitant in taking this on until a spike is performed and a small plan must be put in place to ensure we can complete it in a sprint and can validate it, otherwise we should split the task.
+* 21 : A complex change with a lot of unknowns, we are not sure about the full scope of the required changes yet. There may be sub-tasks that should be pulled out and examined as standalone issues.
+* 50 : Potentially very large and could be an Epic itself. The full scope of the task is unknown, however we have enough domain knowledge and experience to know it is a large task. The unknowns could be large enough to be standalone issues. This task is not achievable in its current state and a new task should be created to spike it and split it.
+* 100: This is an indicator that the work involved is a feature in its own right. It can also be an indicator that we simply do not have enough information to accurately infer the goal of the ticket. Here we would typically request additional context and comments and push this back to the Product Owner.
 
-More Code Block examples
+## The INVEST model for units of work
 
-~~~
-  publish(path, course) {
-    const basePath = '../' + path + '/' + this.folder;
-    futils.initEmptyPath(basePath);
+We try and adopt the INVEST model where we can to ensure high quality and manageble work. Units of work could be User Stories or Tasks, depending on the terminology the team use. As such, this can be used for breaking down any work. The mnemonic stands for:
 
-    this.resources = this.talks.concat(this.labs);
-    futils.copyFileToFolder(this.img, basePath);
-    futils.writeFile(basePath + '/index.html', nunjucks.render('topic.html', this));
+### Independent
 
-    futils.writeFile(basePath + '/ajaxlabel.html',
-        nunjucks.render('ajaxlabel.html',
-            { url: this.url.substring(5) + '/' + this.folder }));
-    futils.writeFile(basePath + '/indexmoodle.html', nunjucks.render('indexmoodle.html', this));
+The work should be self-contained, in a way that there is no inherent dependency on another piece of work. A core faceat of modern Agile methodologies is the ability to move work around and take into account priority. Indepedence is the key to this.
 
-    console.log(this.title);
-    this.publishTalks(basePath);
-    this.publishLabs(basePath, course);
-  }
-~~~
+### Negotiable
 
-This was autodetected as javascript. This one is html:
+The item has no explicit contract and should leave space for discussion. The details of the ticket should always be open for discussion and even open to being discarded if the priority changes.
 
-~~~
-<div class="ui segment pushable">
-  <div class="ui inverted labeled icon left inline vertical sidebar menu">
-    {% for resource in course.allLabs.resources %}
-      {% if resource.title == title %}
-        <a class="active item" href="../../{{resource.parentFolder}}/{{resource.folder}}/{{resource.link}}">
-          {{resource.title}}
-        </a>
-      {% else %}
-        <a class="item" href="../../{{resource.parentFolder}}/{{resource.folder}}/{{resource.link}}">
-          {{resource.title}}
-        </a>
-      {% endif %}
-    {% endfor %}
-  </div>
-  <div class="pusher">
-    <div class="ui basic segment">
-      <br>
-      {% for chapter in chapters %}
-      <div  class="ui tab segment lab" data-tab="{{chapter.shortTitle}}">
-        {{ chapter.content }}
-      </div>
-     {% endfor %}
-    </div>
-  </div>
-</div>
-~~~
+### Valuable
+
+It must deliver value to the stakeholders. Value is subjective, with developers and customers often valuing different things. If no value can be ascertained, it is work that should not be done. It is wasted cycles and not progressing the overall project.
+
+
+### Estimable
+
+You must always be able to estimate the size of a ticket. If a stories size cannot be estimated, it will never be planned, tasked, and, thus, become part of a sprint. So there's actually no point in keeping this kind of story in the Product Backlog at all. Most of the time, estimation cannot be executed due to the lack of supporting information either in the story description itself or directly from the Product Owner.
+
+### Small
+
+Tasks should not be so big as to become impossible to plan/task/prioritize with a certain level of accuracy. The size here is dependent on the team and iteration. Using the story point scale above you can pick an upper limit and try and stick to it.
+
+### Testable
+
+The story or its related description must provide the necessary information to make test development possible. Work is considered Done, as per our definition, when it is tested. If work cannot be tested or verified it is open to interpretation as to whether it is complete or not.
+
+## Using the INVEST Model to Split your stories
+
+Using the above approach, we can take any user story and apply the INVEST model to it. If we are invalidated on any one of the points above, it is a good opportunity to Split the work into more finer grained tasks.
+
+![Splitting User Stories](img/splitting-user-stories.jpg)
