--- a/topic02-agile/book-a/04.04.md
+++ b/topic02-agile/book-a/04.04.md
@@ -1,9 +1,17 @@
-# Images
+# Applying this to an existing Assignment
 
-Image without a title:
+Taking a project that you worked on previously, let's look at the spec with our Agile knowledge
 
-![](img/04.jpg)
+## High level Product Requirements
 
-Image with a title:
+* A Gym requires an app to periodically track assessments on individual members
+* Assessments capture essentials measurements on the member at a given date
+* The app should generate analytics on the status of the member after a given assessment
+* The app should enable a Trainer to review assessments, and comment on any specific assessment
 
-![This is a Stone Arch](img/03.jpg)
+
+## Grading Requirements
+
+In addition to the above high level requirements, a set of technical requirements were also provided as a guideline for the marking scheme.
+
+![Grading Requirements](img/assignment-2.jpg)
