--- a/topic02-agile/book-a/05.Exercises.md
+++ b/topic02-agile/book-a/05.Exercises.md
@@ -1,19 +1,44 @@
-# Exercises & Archives
+# Exercises
 
-You can link to zipped archives:
-
-- [Solutions](./archives/archive.zip)
-
-This archive must be placed in the `archives` folder as shown above.
+Form into teams of 2-3 and tackle the following exercises
 
 ## Exercise 1:
 
-Instructions for exercise 1.
+As a team define your:
+
+1. Definition of Done
+2. Your Story Point Scale for numbers 1, 2, 3, 5 and 8
 
 ## Exercise 2:
 
-Instructions for exercise 2.
+Taking the Baseline requirements, produce a set of User Stories to capture the requirements. Bear in mind that the Baseline requirements incorporate the Starter requirements. To get you started:
+
+* As a User, I want a report that lists my Current BMI
+
+
+ You may introduce a Developer Persona to help you flesh out some of the technical details where it makes sense:
+
+* As a Developer, I want details stored in a YAML file
+
+In the interests of time, aim for 3-5 additional requirements.
 
 ## Exercise 3:
 
-Instructions for exercise 3.
+Taking your User Stories, we want to produce a Sprint Backlog of developer focused tasks to achieve them.
+
+1. Produce Developer Tasks for each User Story that combined adhere to your Definition of Done
+2. Story Point each 
+
+## Exercise 4:
+
+Form your first backlog! 
+
+We order out backlog based on stakeholder value and priority. Try ordering your backlog:
+
+1. By the most difficult first, developers are often drawn to this
+2. By the order that makes sense to build a prototype
+3. By business value, in this case, by the features that will get you the most marks! Ask your lecturer!
+
+## Exercise 5
+
+In your own time, try and produce a full Sprint Backlog, complete with all requirements for the Outstanding requirements. This will bring in multiple personas and give you a very rich set of stories and developer tasks. Compare what you have produced with your original attempt at breaking up the project. 
