updated text on lab

--- a/topic02-agile/book-a/02.02.md
+++ b/topic02-agile/book-a/02.02.md
@@ -1,7 +1,7 @@
 # The importance of knowing when you are Done
 
 
-Agile teams work on the principle of a definition of done. We promote complete flexibility within the team to ensure that **HOW** we get something done is up to the team. We wish to empower smart people to allow the right choices and approach emerge in order to complete something. This is complemented by us already understanding the **WHAT** (should be done) and **WHY** (should it be done) which we receive from our Product Owner. The definition of done is often written with a level of freedom as not all tasks we complete are black and white so the list is deliberately not strict.
+Agile teams work on the principle of a Definition of Done. We promote complete flexibility within the team to ensure that **HOW** we get something done is up to the team. We wish to empower smart people to allow the right choices and approach emerge in order to complete something. This is complemented by us already understanding the **WHAT** (should be done) and **WHY** (should it be done) which we receive from our Product Owner. The definition of done is often written with a level of freedom as not all tasks we complete are black and white so the list is deliberately not strict and it should have some wiggle room.
 
 Here is a sample definition of done from one of our Red Hat Teams:
 
@@ -23,7 +23,7 @@ Going back to the WHAT, WHY and HOW, taking the definition of done in that capac
 * Code added has appropriate tests (where applicable)
     1. **WHAT** = Testing new code that we added
     2. **WHY** = Important that we have some form of coverage to protect our code
-    3. **HOW** = write unit tests for code that is testable , write UART tests etc.
+    3. **HOW** = write unit tests for code that is testable , write acceptance test, write intergration tests etc.
 
 * Code is checked in to a relevant branch
     1. **WHAT** = version control
@@ -39,3 +39,6 @@ Going back to the WHAT, WHY and HOW, taking the definition of done in that capac
     1. **WHAT** = Validation on a machine and with a person that is not the developer who made the changes
     2. **WHY** = Because it avoids confirmation bias, it ensures it works on multiple machines
     3. **HOW** = Deploy on a Cluster and ask someone to validate the work
+
+
+I would encourage you to find your own Definnition of Done. It will bring a sense of pride and quality to your work and brings a minimal standard to any code you write. This will help you in any assignment or job that you might have.
