--- a/topic02-agile/book-a/03.03.md
+++ b/topic02-agile/book-a/03.03.md
@@ -1,6 +1,6 @@
 # Story Points and the INVEST Model
 
-Items within the Backlogs have an associated **Story Points** value. Story Points are a measure of effort/complexity, capturing how much work will be required to achieve the goals of a particular item. Effort/complexity is not directly related to time and we are trying to move away from time based estimates which have many known biases. Story point values are based on a loose Fibonacci scale of 0,1,2,3,5,8,13,21,34,50 and 100. The important thing to remember here is the numbers are Imaginary!! We don't get too hung up on the numbers as we use them to guide us to a correct decision. If we see that numbers are too high, it's a good indicator of risk. We prefer to use smaller numbers to ensure a constant flow of bounded work.
+Items within the Backlogs have an associated **Story Points** value. Story Points are a measure of effort/complexity, capturing how much work will be required to achieve the goals of a particular item. Effort/complexity is not directly related to time and we are trying to move away from time based estimates which have many known biases. Story point values are based on a loose Fibonacci scale of 0,1,2,3,5,8,13,21,34,50 and 100. The important thing to remember here is the numbers are imaginary!! We don't get too hung up on the numbers as we use them to guide us to a correct decision. If we see that numbers are too high, it's a good indicator of risk. We prefer to use smaller numbers to ensure a constant flow of bounded work.
 
 ## Sample Red Hat Story Point Scale
 
@@ -16,6 +16,10 @@ This scale is taken from one of our teams, with each team encouraged to come up 
 * 21 : A complex change with a lot of unknowns, we are not sure about the full scope of the required changes yet. There may be sub-tasks that should be pulled out and examined as standalone issues.
 * 50 : Potentially very large and could be an Epic itself. The full scope of the task is unknown, however we have enough domain knowledge and experience to know it is a large task. The unknowns could be large enough to be standalone issues. This task is not achievable in its current state and a new task should be created to spike it and split it.
 * 100: This is an indicator that the work involved is a feature in its own right. It can also be an indicator that we simply do not have enough information to accurately infer the goal of the ticket. Here we would typically request additional context and comments and push this back to the Product Owner.
+
+## Story Pointing as an exercise: Pointing Poker
+
+We would typically discuss a ticket and have a blind vote on the ticket. We have online tools to facilitate it such as this online version of [Pointing Poker](https://www.pointingpoker.com) btu teams may simply use playing cards to decide it. On the blind vote we count down from 3 and everyone shows their cards. We typically want to discuss outliers here, and the Scrum Master would call upon individuals who voted way outside of the team average to see are we under or over estimating an issue. It's a chance to share knowledge and clarify anything that might have been missed in the original discussion. At this point an individual may change their vote or a revote may happen. The ideal scenario is everyone landing within 1 jump of each other and at that point consensus is almost reached. If we have 1 person out by a boundary number such as the team agreeing on a 3 and that person is on a 5 (off by 1 hop), we tend to opt for the lower number as it has the most votes. However if we have more voters on boundary numbers within 1 hop of each other  we always opt for the higher number on the boundary because it is an element of risk. For example, the votes were 3,3,5,5,3,5,3,3 we would opt for 5 because the number is imaginary and sufficient people feel that there is a risk element present.
 
 ## The INVEST model for units of work
 
@@ -40,7 +44,7 @@ You must always be able to estimate the size of a ticket. If a stories size cann
 
 ### Small
 
-Tasks should not be so big as to become impossible to plan/task/prioritize with a certain level of accuracy. The size here is dependent on the team and iteration. Using the story point scale above you can pick an upper limit and try and stick to it.
+Tasks should not be so big as to become impossible to plan/task/prioritise with a certain level of accuracy. The size here is dependent on the team and iteration. Using the story point scale above you can pick an upper limit and try and stick to it. The smaller the upper limit the better control you have.
 
 ### Testable
 
