--- a/topic02-agile/book-a/05.Exercises.md
+++ b/topic02-agile/book-a/05.Exercises.md
@@ -7,7 +7,9 @@ Form into teams of 2-3 and tackle the following exercises
 As a team define your:
 
 1. Definition of Done
-2. Your Story Point Scale for numbers 1, 2, 3, 5 and 8
+2. Your Story Point Scale for numbers 1, 2, 3, 5 and 8.
+
+Start with your 1 and 2 defintition to give you a baseline, whereby 2 is twice the effort of a 1. From there you can quantify a 3, 5 and 8.
 
 ## Exercise 2:
 
@@ -16,18 +18,18 @@ Taking the Baseline requirements, produce a set of User Stories to capture the r
 * As a User, I want a report that lists my Current BMI
 
 
- You may introduce a Developer Persona to help you flesh out some of the technical details where it makes sense:
+You may introduce a Developer Persona to help you flesh out some of the technical details where it makes sense:
 
 * As a Developer, I want details stored in a YAML file
 
-In the interests of time, aim for 3-5 additional requirements.
+In the interests of time, aim for 3-5 additional requirements to the two I have outlined.
 
 ## Exercise 3:
 
 Taking your User Stories, we want to produce a Sprint Backlog of developer focused tasks to achieve them.
 
 1. Produce Developer Tasks for each User Story that combined adhere to your Definition of Done
-2. Story Point each 
+2. Story Point each using your scale from Exercise 1
 
 ## Exercise 4:
 
@@ -36,9 +38,10 @@ Form your first backlog!
 We order out backlog based on stakeholder value and priority. Try ordering your backlog:
 
 1. By the most difficult first, developers are often drawn to this
-2. By the order that makes sense to build a prototype
-3. By business value, in this case, by the features that will get you the most marks! Ask your lecturer!
+2. By the easiest first, developers often like quick wins
+3. By the order that makes sense to build a prototype in the shortest time possible
+3. By business value, in this case, by the features that will get you the most marks! Ask your lecturer (Product Owner) for advise here!
 
 ## Exercise 5
 
-In your own time, try and produce a full Sprint Backlog, complete with all requirements for the Outstanding requirements. This will bring in multiple personas and give you a very rich set of stories and developer tasks. Compare what you have produced with your original attempt at breaking up the project. 
+In your own time, try and produce a full Sprint Backlog, complete with all requirements for the Outstanding requirements. This will bring in multiple personas and give you a very rich set of stories and developer tasks. Compare what you have produced with your original attempt at breaking up the project. Repeat this process for any future spec you get. Even if you cannot follow a full blown, team based Agile
