--- a/topic05-docker/book-a/04.04.md
+++ b/topic05-docker/book-a/04.04.md
@@ -1,3 +1,14 @@
-# Exposing Ports
+# Running containers remotely
 
-- 
+## Deploying to a 'docker machine'
+
+A 'docker machine' is a remote instance running docker. More info on setting one up can be found at https://docs.docker.com/machine/.
+Deploying a container to a remote docker-machine can be done using the `docker` cli. Instead of all commands running against your local machine, they run against the remote machine.
+
+## Deploying to a kubernetes cluster
+
+If you have a kubernets cluster, you can run docker containers in that cluster via kubernets templates & the `kubectl` cli. https://kubernetes.io/docs/user-guide/kubectl-overview/
+
+## Deploying to an OpenShift cluster
+
+If you have an OpenShift cluster (based off kubernetes), you can run docker containers in that cluster via openshift templates & the `oc` cli. https://openshift.io/
